Doc Step 15. Fixed section overflow. Added pass-through props for input components.

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,6 @@ legend {
 .div--columns>section {
   align-items: center;
   max-height: 100vh;
-  overflow-y: auto;
 }
 
 .div--group-form {
